--- a/webApp/src/css/style.css
+++ b/webApp/src/css/style.css
@@ -125,6 +125,13 @@ input::placeholder {
   top: 0;
   left: 0;
 }
+.centerVideo {
+  justify-content: center;
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  height: 100vh;
+}
 
 @media (max-width: 900px) {
   body {
