--- a/webApp/src/css/style.css
+++ b/webApp/src/css/style.css
@@ -76,6 +76,10 @@ h4 {
   border-color: var(--button-colour);
 }
 
+.submit-btn:hover {
+  box-shadow: 2.5px 2.5px 5px 5px rgba(0, 0, 0, 0.2);
+}
+
 .form-control,
 .form-select,
 .form-control:focus {
